--- a/ecombackend/package.json
+++ b/ecombackend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +26,7 @@
     "mongoose": "^5.5.5",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.0",
+    "swagger-ui-express": "^4.5.0",
     "uuid": "^3.3.2"
   }
 }
